added the flex spacing only for the desktop

--- a/app/globals.css
+++ b/app/globals.css
@@ -77,9 +77,9 @@ body {
   position: relative;
 }
 
-/* @media (min-width: 640px) { */
-.main-content {
-  justify-content: center;
-  gap: 1.5rem;
+@media (min-width: 640px) {
+  main {
+    justify-content: center;
+    gap: 1.5rem;
+  }
 }
-/* } */
